# pseudo-text

./: Essintial-Dinosaur.cabal  README.md
app/: Main.hs
