name:                Essintial-Dinosaur
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/Essintial-Dinosaur#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Essintial-Dinosaur-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Essintial-Dinosaur
                     , hashmap            <= 1.3.0.1
                     , vector
                     , text
                     , directory
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Essintial-Dinosaur
